--- a/A02_BAEKJOON/B01_Step/_11-20/C20_백트레킹.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C20_백트레킹.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ce7ef3c1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "928d9d4d",
    "metadata": {},
    "outputs": [
@@ -246,22 +246,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "92\n",
-      "Q * * * * * * *\n",
-      "* * * * * * Q *\n",
-      "* * * * Q * * *\n",
-      "* * * * * * * Q\n",
-      "* Q * * * * * *\n",
-      "* * * Q * * * *\n",
-      "* * * * * Q * *\n",
-      "* * Q * * * * *\n"
+      "352\n",
+      "Q * * * * * * * *\n",
+      "* * * Q * * * * *\n",
+      "* Q * * * * * * *\n",
+      "* * * * * * * Q *\n",
+      "* * * * * Q * * *\n",
+      "* * * * * * * * Q\n",
+      "* * Q * * * * * *\n",
+      "* * * * Q * * * *\n",
+      "* * * * * * Q * *\n"
      ]
     }
    ],
    "source": [
     "# 5\t9663\t N-Queen\n",
     "\n",
-    "sys.stdin = StringIO('''8''')\n",
+    "sys.stdin = StringIO('''9''')\n",
     "\n",
     "import sys\n",
     "input = sys.stdin.readline\n",
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "id": "a6a22db3",
    "metadata": {},
    "outputs": [
@@ -580,9 +581,347 @@
    "execution_count": null,
    "id": "9ade53d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5 4 6 9 2 7 8\n",
+      "7 8 2 1 3 5 6 4 9\n",
+      "4 6 9 2 7 8 1 3 5\n",
+      "3 2 1 5 4 6 8 9 7\n",
+      "8 7 4 9 1 3 5 2 6\n",
+      "5 9 6 8 2 7 4 1 3\n",
+      "9 1 7 6 5 2 3 8 4\n",
+      "6 4 3 7 8 1 9 5 2\n",
+      "2 5 8 3 9 4 7 6 1\n"
+     ]
+    }
+   ],
    "source": [
     "# 6\t2580\t 스도쿠\n",
+    "sys.stdin = StringIO('''0 3 5 4 6 9 2 7 8\n",
+    "7 8 2 1 0 5 6 0 9\n",
+    "0 6 0 2 7 8 1 3 5\n",
+    "3 2 1 0 4 6 8 9 7\n",
+    "8 0 4 9 1 3 5 0 6\n",
+    "5 9 6 8 2 0 4 1 3\n",
+    "9 1 7 6 5 2 0 8 0\n",
+    "6 0 3 7 0 1 9 5 2\n",
+    "2 5 8 3 9 4 7 6 0''')\n",
+    "\n",
+    "# sys.stdin = StringIO('''0 0 4 0 7 0 9 0 0\n",
+    "# 0 7 0 0 9 0 0 0 8\n",
+    "# 0 0 0 3 0 0 5 6 0\n",
+    "# 8 5 0 7 6 0 4 0 0\n",
+    "# 0 0 0 8 5 3 0 9 0\n",
+    "# 0 0 0 9 0 4 8 0 0\n",
+    "# 9 0 0 0 3 0 0 0 4\n",
+    "# 0 0 7 4 0 0 0 3 5\n",
+    "# 3 0 0 0 8 0 0 0 0''') # 해 여러개. \n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "sudo = list()\n",
+    "\n",
+    "for _ in range(9):\n",
+    "    lst = list(map(int, input().split()))\n",
+    "    sudo.append(lst)\n",
+    "\n",
+    "def not_exist(array9):\n",
+    "    need_fill = list()\n",
+    "    for i in range(1, 10):\n",
+    "        if not i in array9:\n",
+    "            need_fill.append(i)\n",
+    "    return need_fill\n",
+    "\n",
+    "row_need = list()\n",
+    "col_need = list()\n",
+    "\n",
+    "for row in sudo: \n",
+    "    row_need.append(not_exist(row))\n",
+    "for col in zip(*sudo):\n",
+    "    col_need.append(not_exist(col))\n",
+    "\n",
+    "for i in range(9):\n",
+    "    for j in range(9):\n",
+    "        if sudo[i][j] == 0:\n",
+    "            common = list(set(row_need[i]) & set(col_need[j]))\n",
+    "            sudo[i][j] = common[0]\n",
+    "\n",
+    "for row in sudo: \n",
+    "    print(*row)\n",
+    "\n",
+    "# 내 풀이 . \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4885898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5 4 6 9 2 7 8\n",
+      "7 8 2 1 3 5 6 4 9\n",
+      "4 6 9 2 7 8 1 3 5\n",
+      "3 2 1 5 4 6 8 9 7\n",
+      "8 7 4 9 1 3 5 2 6\n",
+      "5 9 6 8 2 7 4 1 3\n",
+      "9 1 7 6 5 2 3 8 4\n",
+      "6 4 3 7 8 1 9 5 2\n",
+      "2 5 8 3 9 4 7 6 1\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\t2580\t 스도쿠\n",
+    "sys.stdin = StringIO('''0 3 5 4 6 9 2 7 8\n",
+    "7 8 2 1 0 5 6 0 9\n",
+    "0 6 0 2 7 8 1 3 5\n",
+    "3 2 1 0 4 6 8 9 7\n",
+    "8 0 4 9 1 3 5 0 6\n",
+    "5 9 6 8 2 0 4 1 3\n",
+    "9 1 7 6 5 2 0 8 0\n",
+    "6 0 3 7 0 1 9 5 2\n",
+    "2 5 8 3 9 4 7 6 0''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "sys.setrecursionlimit(10**6)\n",
+    "\n",
+    "\n",
+    "board = [list(map(int, input().split())) for _ in range(9)]\n",
+    "emptis = [(i, j) for i in range(9) for j in range(9) if board[i][j] == 0]\n",
+    "\n",
+    "\n",
+    "def candidates(r, c):\n",
+    "    # 특정 좌표에서 쓰인 숫자들을 조사 후 안쓰인 후보 반환\n",
+    "\n",
+    "    used = set()\n",
+    "\n",
+    "    used.update(board[r][j] for j in range(9) if board[r][j] != 0)\n",
+    "    used.update(board[i][c] for i in range(9) if board[i][c] != 0)\n",
+    "    sr = (r//3)*3\n",
+    "    sc = (c//3)*3\n",
+    "    for i in range(sr, sr + 3):\n",
+    "        for j in range(sc, sc + 3):\n",
+    "            if board[i][j] != 0:\n",
+    "                used.add(board[i][j])\n",
+    "\n",
+    "    return [n for n in range(1, 10) if n not in used]\n",
+    "\n",
+    "def dfs(idx):\n",
+    "    if idx == len(emptis):\n",
+    "        for row in board:\n",
+    "            print(*row)\n",
+    "        sys.exit(0)\n",
+    "\n",
+    "    r, c = emptis[idx]\n",
+    "    for n in candidates(r, c):\n",
+    "        board[r][c] = n\n",
+    "        dfs(idx + 1)\n",
+    "        board[r][c] = 0\n",
+    "\n",
+    "dfs(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "d24cbae7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5 4 6 9 2 7 8\n",
+      "7 8 2 1 3 5 6 4 9\n",
+      "4 6 9 2 7 8 1 3 5\n",
+      "3 2 1 5 4 6 8 9 7\n",
+      "8 7 4 9 1 3 5 2 6\n",
+      "5 9 6 8 2 7 4 1 3\n",
+      "9 1 7 6 5 2 3 8 4\n",
+      "6 4 3 7 8 1 9 5 2\n",
+      "2 5 8 3 9 4 7 6 1\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sejong/251117_MathForPython/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sys.stdin = StringIO('''0 3 5 4 6 9 2 7 8\n",
+    "7 8 2 1 0 5 6 0 9\n",
+    "0 6 0 2 7 8 1 3 5\n",
+    "3 2 1 0 4 6 8 9 7\n",
+    "8 0 4 9 1 3 5 0 6\n",
+    "5 9 6 8 2 0 4 1 3\n",
+    "9 1 7 6 5 2 0 8 0\n",
+    "6 0 3 7 0 1 9 5 2\n",
+    "2 5 8 3 9 4 7 6 0''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "board = [list(map(int, input().split())) for _ in range(9)]\n",
+    "empties = [(i, j) for i in range(9) for j in range(9) if board[i][j] == 0]\n",
+    "\n",
+    "def is_valid(r, c, n):\n",
+    "\n",
+    "    for j in range(9):\n",
+    "        if board[r][j] == n:\n",
+    "            return False\n",
+    "    for i in range(9):\n",
+    "        if board[i][c] == n:\n",
+    "            return False\n",
+    "    \n",
+    "    sr = (r//3) * 3\n",
+    "    sc = (c//3) * 3\n",
+    "    for i in range(sr, sr+3):\n",
+    "        for j in range(sc, sc + 3):\n",
+    "            if board[i][j] == n:\n",
+    "                return False\n",
+    "    return True\n",
+    "\n",
+    "def dfs(idx): \n",
+    "    if idx == len(empties):\n",
+    "        for row in board:\n",
+    "            print(*row)\n",
+    "        sys.exit(0)\n",
+    "\n",
+    "    r, c = empties[idx]\n",
+    "    for n in range(1, 10):\n",
+    "        if is_valid(r, c, n):\n",
+    "            board[r][c] = n\n",
+    "            dfs(idx + 1)\n",
+    "            board[r][c] = 0\n",
+    "\n",
+    "dfs(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "33dae64b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5 4 6 9 2 7 8\n",
+      "7 8 2 1 3 5 6 4 9\n",
+      "4 6 9 2 7 8 1 3 5\n",
+      "3 2 1 5 4 6 8 9 7\n",
+      "8 7 4 9 1 3 5 2 6\n",
+      "5 9 6 8 2 7 4 1 3\n",
+      "9 1 7 6 5 2 3 8 4\n",
+      "6 4 3 7 8 1 9 5 2\n",
+      "2 5 8 3 9 4 7 6 1\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sejong/251117_MathForPython/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sys.stdin = StringIO('''0 3 5 4 6 9 2 7 8\n",
+    "7 8 2 1 0 5 6 0 9\n",
+    "0 6 0 2 7 8 1 3 5\n",
+    "3 2 1 0 4 6 8 9 7\n",
+    "8 0 4 9 1 3 5 0 6\n",
+    "5 9 6 8 2 0 4 1 3\n",
+    "9 1 7 6 5 2 0 8 0\n",
+    "6 0 3 7 0 1 9 5 2\n",
+    "2 5 8 3 9 4 7 6 0''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "board = [list(map(int, input().split())) for _ in range(9)]\n",
+    "\n",
+    "row = [[False] * 10 for _ in range(9)]\n",
+    "col = [[False] * 10 for _ in range(9)]\n",
+    "box = [[False] * 10 for _ in range(9)]\n",
+    "\n",
+    "empties = []\n",
+    "\n",
+    "for r in range(9):\n",
+    "    for c in range(9):\n",
+    "        n = board[r][c]\n",
+    "        if n == 0:\n",
+    "            empties.append((r, c))\n",
+    "        else:\n",
+    "            row[r][n] = True\n",
+    "            col[c][n] = True\n",
+    "            b = ( r // 3) * 3 + ( c // 3)\n",
+    "            box[b][n] = True\n",
+    "\n",
+    "def dfs(idx):\n",
+    "    if idx == len(empties):\n",
+    "        for r in range(9):\n",
+    "            print(*board[r])\n",
+    "        sys.exit(0)\n",
+    "        \n",
+    "    r, c = empties[idx]\n",
+    "    b = (r // 3) * 3 + ( c // 3)\n",
+    "\n",
+    "    for n in range(1, 10):\n",
+    "        if not row[r][n] and not col[c][n] and not box[b][n]:\n",
+    "            board[r][c] = n\n",
+    "            row[r][n] = col[c][n] = box[b][n] = True\n",
+    "\n",
+    "            dfs(idx + 1)\n",
+    "\n",
+    "            board[r][c] = 0\n",
+    "            row[r][n] = col[c][n] = box[b][n] = False\n",
+    "            \n",
+    "dfs(0)\n",
     "\n",
     "\n"
    ]
