--- a/A02_BAEKJOON/B01_Step/_11-20/C20_백트레킹.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C20_백트레킹.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a6a22db3",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "id": "e784bd41",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "id": "e99f64ed",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9ade53d8",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e4885898",
    "metadata": {},
    "outputs": [
@@ -684,6 +684,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sejong/projects/251117_MathForPython/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -729,19 +737,21 @@
     "        for row in board:\n",
     "            print(*row)\n",
     "        sys.exit(0)\n",
-    "\n",
+    " \n",
     "    r, c = emptis[idx]\n",
     "    for n in candidates(r, c):\n",
     "        board[r][c] = n\n",
     "        dfs(idx + 1)\n",
     "        board[r][c] = 0\n",
     "\n",
-    "dfs(0)"
+    "dfs(0)\n",
+    "\n",
+    "%tb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "id": "d24cbae7",
    "metadata": {},
    "outputs": [
@@ -767,14 +777,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sejong/251117_MathForPython/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -831,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "id": "33dae64b",
    "metadata": {},
    "outputs": [
@@ -857,14 +859,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sejong/251117_MathForPython/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -931,9 +925,185 @@
    "execution_count": null,
    "id": "ca4f5765",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n",
+      "-24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7\t14888\t 연산자 끼워넣기\n",
+    "sys.stdin = StringIO('''6\n",
+    "1 2 3 4 5 6\n",
+    "2 1 1 1''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "nums = tuple(map(int, input().split()))\n",
+    "oper = tuple(map(int, input().split()))\n",
+    "\n",
+    "def plus(a, b): return a + b\n",
+    "def minus(a, b) : return a - b\n",
+    "def multi(a, b) : return a * b\n",
+    "def div(a, b) : return int(a / b)\n",
+    "funs = [plus, minus, multi, div]\n",
+    "\n",
+    "opers = [ funs[i] for i, val in enumerate(oper) for _ in range(val) ]\n",
+    "oper_flag = [True] * (n - 1) \n",
+    "\n",
+    "\n",
+    "result = [nums[0]]\n",
+    "\n",
+    "answers = []\n",
+    "def dfs(depth:int):\n",
+    "# depth는 연산할 인덱스 (총 n - 1개) (index 는 0 ~ n - 2)\n",
+    "\n",
+    "    if depth == n - 1: \n",
+    "        answers.append(result[depth])\n",
+    "        return\n",
+    "    \n",
+    "    for i in range(n - 1):\n",
+    "        if oper_flag[i]:\n",
+    "            function = opers[i]\n",
+    "            oper_flag[i] = False\n",
+    "            result.append(function(result[depth], nums[depth + 1]))\n",
+    "            dfs(depth + 1)\n",
+    "            oper_flag[i] = True\n",
+    "            result.pop()\n",
+    "dfs(0)\n",
+    "print(max(answers))\n",
+    "print(min(answers))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b2ffb8f",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 7\t14888\t 연산자 끼워넣기"
+    "import sys\n",
+    "from io import StringIO\n",
+    "\n",
+    "# 테스트용 입력 (백준 제출 시 아래 두 줄은 제거)\n",
+    "sys.stdin = StringIO('''6\n",
+    "1 2 3 4 5 6\n",
+    "2 1 1 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "nums = tuple(map(int, input().split()))\n",
+    "oper = tuple(map(int, input().split()))  # +, -, *, / 개수\n",
+    "\n",
+    "def plus(a, b): \n",
+    "    return a + b\n",
+    "\n",
+    "def minus(a, b): \n",
+    "    return a - b\n",
+    "\n",
+    "def multi(a, b): \n",
+    "    return a * b\n",
+    "\n",
+    "def div(a, b):\n",
+    "    # 문제 조건: 0 쪽으로 버림\n",
+    "    if a < 0:\n",
+    "        return -(-a // b)\n",
+    "    return a // b\n",
+    "\n",
+    "funs = (plus, minus, multi, div)\n",
+    "\n",
+    "# 연산자 목록 펼치기\n",
+    "opers = [funs[i] for i, cnt in enumerate(oper) for _ in range(cnt)]\n",
+    "oper_flag = [True] * len(opers)   # 어떤 연산자를 썼는지 표시\n",
+    "\n",
+    "result_stack = [nums[0]]          # 현재까지 계산 결과 스택\n",
+    "answers = []\n",
+    "\n",
+    "def dfs(depth: int):\n",
+    "    # depth: 지금까지 사용한 연산자 개수 (0 ~ n-2)\n",
+    "\n",
+    "    if depth == n - 1:\n",
+    "        answers.append(result_stack[-1])\n",
+    "        return\n",
+    "    \n",
+    "    for i in range(len(opers)):\n",
+    "        if not oper_flag[i]:\n",
+    "            continue\n",
+    "\n",
+    "        oper_flag[i] = False\n",
+    "        cur = result_stack[-1]\n",
+    "        next_val = opers[i](cur, nums[depth + 1])\n",
+    "        result_stack.append(next_val)\n",
+    "\n",
+    "        dfs(depth + 1)\n",
+    "\n",
+    "        result_stack.pop()\n",
+    "        oper_flag[i] = True\n",
+    "\n",
+    "dfs(0)\n",
+    "print(max(answers))\n",
+    "print(min(answers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "5613cee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n",
+      "-24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7\t14888\t 연산자 끼워넣기\n",
+    "sys.stdin = StringIO('''6\n",
+    "1 2 3 4 5 6\n",
+    "2 1 1 1''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "nums = tuple(map(int, input().split()))\n",
+    "add, sub, mul, div = map(int, input().split())\n",
+    "\n",
+    "MAX = -10**12\n",
+    "MIN = 10**12\n",
+    "\n",
+    "def dfs(idx, cur, add, sub, mul, div):\n",
+    "    global MAX, MIN\n",
+    "\n",
+    "    if idx == n:\n",
+    "        MAX = max(MAX, cur)\n",
+    "        MIN = min(MIN, cur)\n",
+    "        return \n",
+    "    \n",
+    "    if add > 0:\n",
+    "        dfs(idx + 1, cur + nums[idx], add -1, sub, mul, div)\n",
+    "    if sub > 0:\n",
+    "        dfs(idx + 1, cur - nums[idx], add, sub - 1, mul, div)\n",
+    "    if mul > 0:\n",
+    "        dfs(idx + 1, cur * nums[idx], add, sub, mul - 1, div)\n",
+    "    if div > 0:\n",
+    "        dfs(idx + 1, int(cur / nums[idx]), add, sub, mul, div - 1)\n",
+    "\n",
+    "dfs(1, nums[0], add, sub, mul, div)\n",
+    "\n",
+    "print(MAX)\n",
+    "print(MIN)"
    ]
   },
   {
@@ -949,7 +1119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
