백트레킹 완성

--- a/A02_BAEKJOON/B01_Step/_11-20/C20_백트레킹.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C20_백트레킹.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 67,
    "id": "8d2c6ddd",
    "metadata": {},
    "outputs": [
@@ -87,18 +87,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2\n",
-      "1 3\n",
-      "1 4\n",
-      "2 3\n",
-      "2 4\n",
-      "3 4\n"
+      "1 2 3\n",
+      "1 2 4\n",
+      "1 2 5\n",
+      "1 2 6\n",
+      "1 2 7\n",
+      "1 2 8\n",
+      "1 3 4\n",
+      "1 3 5\n",
+      "1 3 6\n",
+      "1 3 7\n",
+      "1 3 8\n",
+      "1 4 5\n",
+      "1 4 6\n",
+      "1 4 7\n",
+      "1 4 8\n",
+      "1 5 6\n",
+      "1 5 7\n",
+      "1 5 8\n",
+      "1 6 7\n",
+      "1 6 8\n",
+      "1 7 8\n",
+      "2 3 4\n",
+      "2 3 5\n",
+      "2 3 6\n",
+      "2 3 7\n",
+      "2 3 8\n",
+      "2 4 5\n",
+      "2 4 6\n",
+      "2 4 7\n",
+      "2 4 8\n",
+      "2 5 6\n",
+      "2 5 7\n",
+      "2 5 8\n",
+      "2 6 7\n",
+      "2 6 8\n",
+      "2 7 8\n",
+      "3 4 5\n",
+      "3 4 6\n",
+      "3 4 7\n",
+      "3 4 8\n",
+      "3 5 6\n",
+      "3 5 7\n",
+      "3 5 8\n",
+      "3 6 7\n",
+      "3 6 8\n",
+      "3 7 8\n",
+      "4 5 6\n",
+      "4 5 7\n",
+      "4 5 8\n",
+      "4 6 7\n",
+      "4 6 8\n",
+      "4 7 8\n",
+      "5 6 7\n",
+      "5 6 8\n",
+      "5 7 8\n",
+      "6 7 8\n"
      ]
     }
    ],
    "source": [
     "# 2\t15650\t N과 M (2)\n",
-    "sys.stdin = StringIO('''4 2''')\n",
+    "sys.stdin = StringIO('''8 3''')\n",
     "\n",
     "import sys\n",
     "input = sys.stdin.readline\n",
@@ -1111,15 +1161,166 @@
    "execution_count": null,
    "id": "96c9210c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 8\t14889\t 스타트와 링크"
+    "# 8\t14889\t 스타트와 링크\n",
+    "import sys \n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''8\n",
+    "0 5 4 5 4 5 4 5\n",
+    "4 0 5 1 2 3 4 5\n",
+    "9 8 0 1 2 3 1 2\n",
+    "9 9 9 0 9 9 9 9\n",
+    "1 1 1 1 0 1 1 1\n",
+    "8 7 6 5 4 0 3 2\n",
+    "9 1 9 1 9 1 0 9\n",
+    "6 5 4 3 2 1 9 0''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "MIN = 100*20*20\n",
+    "SCORES = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_team_scores(teams : list[int]):\n",
+    "    # 팀 점수 게산\n",
+    "\n",
+    "    team_score = 0\n",
+    "    for i in teams:\n",
+    "        for j in teams:\n",
+    "            if i != j:\n",
+    "                team_score += SCORES[i][j]\n",
+    "    return team_score\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 1명을 뽑아놓고 나머지 4명을 뽑는다. 그리고 남은 5명과 점수 비교. \n",
+    "# 0 번 선수를 제외하고 나머지 선수들\n",
+    "\n",
+    "first_team = list([0])\n",
+    "MEMBERS = tuple(range(1, N)) \n",
+    "\n",
+    "def get_second_team(first_team : list[int]):\n",
+    "    return [m for m in MEMBERS if m not in first_team]\n",
+    "\n",
+    "def dfs(need_member:int, start:int):\n",
+    "    # need_member : 뽑아야할 인원\n",
+    "\n",
+    "    global MIN\n",
+    "    if need_member == 0 :\n",
+    "        second_team = get_second_team(first_team)\n",
+    "        first_score = get_team_scores(first_team)\n",
+    "        second_score = get_team_scores(second_team)\n",
+    "        diff = abs(first_score - second_score)\n",
+    "\n",
+    "        if diff < MIN:\n",
+    "            MIN = diff\n",
+    "        return\n",
+    "\n",
+    "    for i in range(start, N - 1 - (need_member - 1)):\n",
+    "        first_team.append(MEMBERS[i])\n",
+    "        dfs(need_member - 1, i + 1)\n",
+    "        first_team.pop()\n",
+    "\n",
+    "\n",
+    "dfs(N//2 - 1, 0)\n",
+    "\n",
+    "print(MIN)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40bff4ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8\t14889\t 스타트와 링크\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''6\n",
+    "0 1 2 3 4 5\n",
+    "1 0 2 3 4 5\n",
+    "1 2 0 3 4 5\n",
+    "1 2 3 0 4 5\n",
+    "1 2 3 4 0 5\n",
+    "1 2 3 4 5 0''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "S = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "INF = 10**9\n",
+    "answer = INF\n",
+    "visited = [False] * N\n",
+    "\n",
+    "\n",
+    "def cal_diff():\n",
+    "    start_team = list()\n",
+    "    link_team = list()\n",
+    "    for i in range(N):\n",
+    "        if visited[i]:\n",
+    "            start_team.append(i)\n",
+    "        else:\n",
+    "            link_team.append(i)\n",
+    "\n",
+    "    start_score = 0\n",
+    "    link_score = 0\n",
+    "\n",
+    "    for i in range(N // 2):\n",
+    "        for j in range(i + 1, N // 2):\n",
+    "            a, b = start_team[i], start_team[j]\n",
+    "            c, d = link_team[i], link_team[j]\n",
+    "            start_score += S[a][b] + S[b][a]\n",
+    "            link_score += S[c][d] + S[d][c]\n",
+    "\n",
+    "    return abs(start_score - link_score)\n",
+    "\n",
+    "\n",
+    "def dfs(idx, cnt):\n",
+    "    global answer\n",
+    "\n",
+    "    if cnt == N // 2:\n",
+    "        answer = min(answer, cal_diff())\n",
+    "        return\n",
+    "\n",
+    "    for i in range(idx, N):\n",
+    "        if not visited[i]:\n",
+    "            visited[i] = True\n",
+    "            dfs(i + 1, cnt + 1)\n",
+    "            visited[i] = False\n",
+    "\n",
+    "visited[0] = True\n",
+    "\n",
+    "dfs(1, 1)\n",
+    "print(answer)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
