동적계획법 1

--- a/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
@@ -2,14 +2,202 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3133b8e2",
+   "execution_count": 15,
+   "id": "72bc5bdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\t24416\t 알고리즘 수업 - 피보나치 수 1\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "\n",
+    "fib_count = 0\n",
+    "fibonacci_count = 0\n",
+    "\n",
+    "\n",
+    "def fib(idx):\n",
+    "    global fib_count\n",
+    "\n",
+    "    if idx == 1 or idx == 2:\n",
+    "        fib_count += 1\n",
+    "        return 1\n",
+    "\n",
+    "    return fib(idx - 1) + fib(idx - 2)\n",
+    "\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    global fibonacci_count\n",
+    "\n",
+    "    fibos = [1] * (n + 1)\n",
+    "    for i in range(3, n + 1):\n",
+    "        fibonacci_count += 1\n",
+    "        fibos[i] = fibos[i - 1] + fibos[i - 2]\n",
+    "    return fibos[n]\n",
+    "\n",
+    "print(fibonacci(N), fibonacci_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8824af23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "\n",
-    "from io import StringIO"
+    "# 2\t9184\t 신나는 함수 실행"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abf2edc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3\t1904\t 01타일"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f6adc51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4\t9461\t 파도반 수열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c57fe605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5\t1912\t 연속합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a3c1297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6\t1149\t RGB거리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fcb78ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7\t1932\t 정수 삼각형"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42cf9690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8\t2579\t 계단 오르기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bfde8a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9\t1463\t 1로 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32a09e53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10\t10844\t 쉬운 계단 수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49131b37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 11\t2156\t 포도주 시식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed76c727",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 12\t11053\t 가장 긴 증가하는 부분 수열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24417c88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 13\t11054\t 가장 긴 바이토닉 부분 수열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d03405a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 14\t2565\t 전깃줄"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfba3b66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 15\t9251\t LCS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6f564f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 16\t12865\t 평범한 배낭"
    ]
   }
  ],
