동적 계획법 1

--- a/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
@@ -52,12 +52,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "8824af23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w(1, 1, 1) = 2\n",
+      "w(2, 2, 2) = 4\n",
+      "w(10, 4, 6) = 523\n",
+      "w(50, 50, 50) = 1048576\n",
+      "w(-1, 7, 18) = 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2\t9184\t 신나는 함수 실행"
+    "# 2\t9184\t 신나는 함수 실행\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''1 1 1\n",
+    "2 2 2\n",
+    "10 4 6\n",
+    "50 50 50\n",
+    "-1 7 18\n",
+    "-1 -1 -1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "max_val = 21\n",
+    "maps = [[[0]*(max_val) for _ in range(max_val)] for _ in range(max_val)]\n",
+    "\n",
+    "for ai in range(0, max_val):\n",
+    "    for bi in range(0, max_val):\n",
+    "        for ci in range(0, max_val):\n",
+    "            if ai == 0 or bi == 0 or ci == 0:\n",
+    "                maps[ai][bi][ci] = 1\n",
+    "            \n",
+    "            elif ai < bi < ci:\n",
+    "                maps[ai][bi][ci] = maps[ai][bi][ci-1] + \\\n",
+    "                    maps[ai][bi-1][ci-1] - maps[ai][bi-1][ci]\n",
+    "            else:\n",
+    "                maps[ai][bi][ci] = maps[ai-1][bi][ci] + maps[ai-1][bi - 1][ci] + \\\n",
+    "                    maps[ai-1][bi][ci-1] - maps[ai-1][bi-1][ci-1]\n",
+    "\n",
+    "def wdp(a, b, c):\n",
+    "    if a <= 0 or b <= 0 or c <= 0:\n",
+    "        return 1 \n",
+    "    if a > 20 or b > 20 or c > 20:\n",
+    "        return maps[20][20][20]\n",
+    "    \n",
+    "    return maps[a][b][c]\n",
+    "\n",
+    "while True:\n",
+    "    a, b, c = map(int, input().split())\n",
+    "    if a == b == c == -1:\n",
+    "        break\n",
+    "    print(f\"w({a}, {b}, {c}) = {wdp(a, b, c)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a316ba73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w(1, 1, 1) = 2\n",
+      "w(2, 2, 2) = 4\n",
+      "w(10, 4, 6) = 523\n",
+      "w(50, 50, 50) = 1048576\n",
+      "w(-1, 7, 18) = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2\t9184\t 신나는 함수 실행\n",
+    "\n",
+    "import sys\n",
+    "from functools import lru_cache\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''1 1 1\n",
+    "2 2 2\n",
+    "10 4 6\n",
+    "50 50 50\n",
+    "-1 7 18\n",
+    "-1 -1 -1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "@lru_cache(maxsize=None)\n",
+    "def w(a: int, b: int, c: int) -> int:\n",
+    "    if a <= 0 or b <= 0 or c <= 0:\n",
+    "        return 1\n",
+    "    if a > 20 or b > 20 or c > 20:\n",
+    "        return w(20, 20, 20)\n",
+    "\n",
+    "    if a < b < c:\n",
+    "        return w(a, b, c-1) + w(a, b-1, c-1) - w(a, b-1, c)\n",
+    "    return w(a-1, b, c) + w(a-1, b-1, c) + w(a-1, b, c-1) - w(a-1, b-1, c-1)\n",
+    "\n",
+    "while True:\n",
+    "    a, b, c = map(int, input().split())\n",
+    "    if a == b == c == -1:\n",
+    "        break\n",
+    "    print(f\"w({a}, {b}, {c}) = {w(a, b, c)}\")\n"
    ]
   },
   {
