동적_계획법 3

--- a/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
@@ -170,9 +170,65 @@
    "execution_count": null,
    "id": "abf2edc9",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7871\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3\t1904\t 01타일\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''1000000''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "MOD = 15746\n",
+    "\n",
+    "fibos = [0] * (N+1)\n",
+    "fibos[1:3] = [1, 2]\n",
+    "\n",
+    "for n in range(3, N + 1):\n",
+    "    fibos[n] = (fibos[n-1] + fibos[n-2]) % MOD\n",
+    "\n",
+    "print(fibos[N])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea8c319c",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 3\t1904\t 01타일"
+    "# 3\t1904\t 01타일\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''1000000''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "MOD = 15746\n",
+    "\n",
+    "if N == 1:\n",
+    "    print(1)\n",
+    "elif N == 2:\n",
+    "    print(2)\n",
+    "else:\n",
+    "    a, b = 1, 2\n",
+    "    for _ in range(3, N + 1):\n",
+    "        a, b = b, (a + b)%MOD\n",
+    "    print(b)"
    ]
   },
   {
