동적_계획법 4

--- a/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
@@ -233,12 +233,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2f6adc51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t9461\t 파도반 수열"
+    "# 4\t9461\t 파도반 수열\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "6\n",
+    "12''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "MAX = 100\n",
+    "dp = [1] * (MAX + 1)\n",
+    "dp[4], dp[5] = 2, 2\n",
+    "\n",
+    "for i in range(6, MAX + 1):\n",
+    "    dp[i] = dp[i-5] + dp[i-1]\n",
+    "\n",
+    "N = int(input())\n",
+    "for _ in range(N):\n",
+    "    n = int(input())\n",
+    "    print(dp[n])"
    ]
   },
   {
@@ -248,7 +277,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5\t1912\t 연속합"
+    "# 5\t1912\t 연속합\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10\n",
+    "10 -4 3 1 5 6 -35 12 21 -1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -364,7 +408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
